# Photon-solana-contracts

./: .dockerignore  .gitignore  .gitlab-ci.yml  .prettierrc  .prettierrc.yml  .rustfmt.toml  Anchor.toml  Cargo.toml  README.md  deploy.sh  deploy_mainnet.sh  fixmetadata.py  package.json  test.sh
.github/workflows/: main.yml
docker/: Dockerfile_module  Dockerfile_solana  build_solana_test_state.sh  docker-compose.yml  executor-config.yml  listener-config.yml  publisher-config.yml  watcher-config.yml
ext_config/: bridge-ngl.toml
extensions/: bridge-borpa.toml  bridge-ngl.toml  genome.toml
genome_test_setup/: bookmaker.ts  feeProvider.ts  gameProvider.ts  genome.ts  tournament.ts  treasury.ts
keys/: genome-keypair.json  ngl_core-keypair.json  onefunc-keypair.json  owner.json  photon-keypair.json  transmitters.json
migrations/: deploy.ts
programs/aggregation-spotter/: Cargo.toml
programs/aggregation-spotter/src/: gov.rs  interface.rs  lib.rs  signature.rs  util.rs
programs/entangle-photon-sol/: Cargo.toml
programs/entangle-photon-sol/src/: error.rs  gov.rs  interface.rs  lib.rs  protocol_data.rs  signature.rs  util.rs
programs/genome/: Cargo.toml
programs/genome/src/: commons.rs  enums.rs  lib.rs  state.rs
programs/genome/src/instructions/: approve_operator.rs  constants.rs  initialize.rs  initialize_bridge.rs  mod.rs  photon_msg.rs
programs/genome/src/instructions/bookmaker/: claim_cancel_tokens.rs  claim_finish_tokens.rs  claim_overbook_tokens.rs  make_bet.rs  mod.rs  set_minimal_bet.rs
programs/genome/src/instructions/fee/: claim_beneficiary_fees.rs  mod.rs  set_fee_params.rs
programs/genome/src/instructions/game/: cancel_game.rs  create_game_omnichain.rs  create_game_singlechain.rs  finish_game.rs  mod.rs  register_game_participants_omnichain.rs  register_game_participants_singlechain.rs  set_minimal_wager.rs  start_game_singlechain.rs
programs/genome/src/instructions/tournament/: cancel_tournament.rs  create_tournament_omnichain.rs  create_tournament_singlechain.rs  deliver_finish_organizer_tokens_omnichain.rs  deliver_finish_organizer_tokens_singlechain.rs  deliver_finish_participant_tokens_omnichain.rs  deliver_finish_participant_tokens_singlechain.rs  finish_tournament.rs  mod.rs  refund_organizer_cancelation_omnichain.rs  refund_organizer_cancelation_singlechain.rs  refund_participant_cancelation_omnichain.rs  refund_participant_cancelation_singlechain.rs  register_participant_to_tournament_singlechain.rs  register_tournament_omnichain.rs  register_tournament_singlechain.rs  start_tournament.rs  (+4 more)
programs/ngl-core/: Cargo.toml
programs/ngl-core/src/: lib.rs
programs/onefunc/: Cargo.toml
programs/onefunc/src/: lib.rs
programs/zerosum/: Cargo.toml
programs/zerosum/src/: commons.rs  error.rs  lib.rs  state.rs
programs/zerosum/src/instructions/: approve_operator.rs  constants.rs  initialize.rs  photon_msg.rs
solana-keeper-module/: Cargo.toml
solana-keeper-module/doc/: README.md  config.yaml
solana-keeper-module/src/: app.rs  cli.rs  logging.rs  main.rs  solana_listener.rs
solana-keeper-module/src/listener_app/: app.rs  config.rs  data.rs  error.rs  mod.rs  rabbitmq_sender.rs  solana_listener.rs  solana_logs.rs
solana-keeper-module/src/solana_listener/: solana_logs.rs
solana-transactor/: Cargo.toml
solana-transactor/src/: alt_manager.rs  ix_compiler.rs  lib.rs  main.rs  rpc_pool.rs  transactor.rs
solana-transactor/tests/: test_send.rs
tests/: photon.ts  utils.ts
tests/accounts/: executor.json  keeper_1  keeper_2  keeper_3  transmitter_1  transmitter_2  transmitter_3
tests_genome/: CoreSetupGenome.ts  Fee.ts  Game.ts  Tournament.ts  Treasury.ts
tests_genome/flows/: bookMakerHappyPath.ts  gameHappyPath.ts  tournamentHappyPath.ts
transmitter-common/: Cargo.toml
transmitter-common/src/: config.rs  data.rs  error.rs  lib.rs  mongodb.rs  protocol_extension.rs  rabbitmq_client.rs  utils.rs
transmitter-module/: Cargo.toml
transmitter-module/doc/: README.md  executor-config.yaml  executor-config.yml  listener-config.yaml  listener-config.yml  watcher-config.yml
transmitter-module/src/: cli.rs  main.rs
transmitter-module/src/common/: config.rs  mod.rs  rabbitmq.rs
transmitter-module/src/common/solana_logs/: event_processor.rs  mod.rs  parse_logs.rs  solana_event_listener.rs  solana_retro_reader.rs
transmitter-module/src/executor_app/: alt_operation_manager.rs  app.rs  config.rs  error.rs  extension_manager.rs  last_block_updater.rs  mod.rs  operation_manager.rs  rabbitmq_consumer.rs  solana_transactor.rs  tx_builder_exec.rs  tx_builder_load.rs  tx_builder_sign.rs
transmitter-module/src/listener_app/: app.rs  config.rs  error.rs  mod.rs  rabbitmq_publisher.rs  solana_event_listener.rs  solana_events_reader.rs  solana_listener.rs  solana_logs.rs  solana_logs_processor.rs
transmitter-module/src/watcher_app/: app.rs  config.rs  error.rs  mod.rs  rabbitmq_publisher.rs  solana_logs_processor.rs
transmitter-protocol-extensions/borpa-bridge-extension/: Cargo.toml
transmitter-protocol-extensions/borpa-bridge-extension/src/: bridge_extension.rs
transmitter-protocol-extensions/bridge-extension/: Cargo.toml
transmitter-protocol-extensions/bridge-extension/src/: bridge_extension.rs  lib.rs
transmitter-protocol-extensions/genome-extension/src/: genome_extension.rs
transmitter-protocol-extensions/gov-extension/: Cargo.toml
transmitter-protocol-extensions/gov-extension/src/: gov_extension.rs  lib.rs
transmitter-protocol-extensions/onefunc-extension/: Cargo.toml
transmitter-protocol-extensions/onefunc-extension/src/: lib.rs  onefunc_extension.rs
transmitter-protocol-extensions/zs-extension/: Cargo.toml
transmitter-protocol-extensions/zs-extension/src/: genome_extension.rs  lib.rs  zs_extension.rs
transmitter-test-listener/: Cargo.toml  mongo-init.js  test-listener-config.yml
transmitter-test-listener/src/: cli.rs  main.rs  rabbitmq.rs  test_config.rs
transmitter-test-publisher/: Cargo.toml  publisher-config.yml
transmitter-test-publisher/src/: cli.rs  main.rs  rabbitmq_publisher.rs  util.rs
(+44 files in other folders)
