[workspace]
members = [
    "programs/*",
    "transmitter-module",
    "transmitter-test-publisher",
    "transmitter-common",
    "transmitter-test-listener",
    "transmitter-protocol-extensions/*"
]
resolver = "1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
