[workspace]
members = [
    "programs/*",
    "transmitter-common",
    "transmitter-module",
    "transmitter-protocol-extensions/*",
    "transmitter-test-listener",
    "transmitter-test-publisher",
]
resolver = "1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
