[package]
name = "solana_keeper_module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.29"
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
entangle-photon-sol = { path = "../programs/entangle-photon-sol" }
futures-util = "0.3"
log = "0.4"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
solana-client = "1.17"
solana-sdk = "1.16"
tokio = { version = "1.36" }
