[package]
name = "solana_keeper_module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amqprs = "1.5"
anchor-lang = "0.29"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
config = "0.14"
derive_more = { version = "0.99", features = ["display"] }
env_logger = "0.11"
entangle-photon-sol = { path = "../programs/entangle-photon-sol" }
futures-util = "0.3"
log = "0.4"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "1.17"
solana-sdk = "1.16"
tokio = { version = "1.36" }
