[package]
name = "solana-transactor"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11"
tokio = { version = "1.36", features = ["sync"], default-features = false }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
solana-sdk = "1.16"
solana-client = "1.16"
bincode = "1.3.3"
bs58 = "0.5.1"
base64 = "0.22.1"
uuid = { version = "1.8.0", features = ["v4"] }
futures = "0.3.30"
hex = "0.4.3"
indexmap = "2.2.6"
url = "2.5.1"
portable-atomic = "1.6.0"
clap = { version = "4.5.7", features = ["derive"] }
solana-address-lookup-table-program = "1.16"

[dev-dependencies]
spl-token = "4.0.0"
spl-associated-token-account = "2.2.0"
