[package]
name = "transmitter-common"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
devnet = []
default = []

[dependencies]
amqprs = "1.5"
async-trait = "0.1"
entangle-photon-sol = { path = "../programs/entangle-photon-sol" }
hex = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10"
solana-sdk = "1.17"
thiserror = "1.0"
tokio = "1.36"


