[package]
name = "transmitter-test-listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amqprs = "1.5"
async-trait = "0.1.77"
config = "0.14"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
hex = "0.4"
log = "0.4"
mongodb = "2.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.36" }
transmitter-common = { path = "../transmitter-common" }

