[package]
name = "test-publisher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amqprs = "1.5"
async-trait = "0.1.77"
config = "0.14"
clap = { version = "4.5", features = ["derive"] }
entangle-photon-sol = { path = "../programs/entangle-photon-sol" }
env_logger = "0.11"
ethabi = "18.0"
hex = "0.4"
libsecp256k1 = "0.7"
log = "0.4"
onefunc = {path = "../programs/onefunc"}
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
solana-program = "1.17"
solana-sdk = "1.17"
thiserror = "1.0"
tokio = { version = "1.36" }
transmitter-common = { path = "../transmitter-common" }
