[package]
name = "aggregation-spotter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aggregation_spotter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
ahash = "=0.8.6"
anchor-spl = { version = "0.29.0" }
sha3 = { version = "0.10.8", default-features = false }
#hex = "0.4.3"
ed25519-dalek = { version = "2.1.0", default-features = false }
ethabi = { version = "18.0.0", features = ["std"] }
#primitive-types = "0.10.0"
