[package]
name = "entangle-photon-sol"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "photon"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29", features = ["init-if-needed"] }
ahash = "=0.8.4"
sha3 = { version = "0.10.8", default-features = false }
ethabi = { version = "18.0.0", features = ["std"] }
num_enum = "0.7"
log = "0.4.20"
hex = "0.4.3"
