# This package is a copy from the ngl-core
# Found at photon-solana/ngl-core
[package]
name = "ngl-core"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ngl_core"

[features]
test = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
devnet = []
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["metadata"] }
solana-program = "1.17.6"                                           # On the original implementation is "<1.17.0"
spl-token-2022 = "1.0.0"                                            # On the original implementation is "0.9.0"
