[package]
name = "onefunc"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "onefunc"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
entangle-aggregation-spotter-sol = { path = "../aggregation-spotter" }
anchor-lang = "0.29.0"
ethabi = { version = "18.0.0", default-features = false }
