[package]
name = "onefunc"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "onefunc"

[features]
no-entrypoint = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29" }
entangle-photon-sol = { path = "../entangle-photon-sol", features = ["no-entrypoint", "cpi"] }
ethabi = { version = "18.0.0", default-features = false }
