[package]
name = "borpa-bridge-extension"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]
name = "borpa_bridge_extension"

[dependencies]
config = "0.14"
entangle-photon-sol = { path = "../../programs/entangle-photon-sol", features = [
    "no-entrypoint",
] }
env_logger = "0.11"
ethabi = "18.0.0"
hex = { version = "0.4.3", features = ["serde"] }
lazy_static = "1.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
solana-sdk = "1.16"
spl-associated-token-account = { version = "1.1.2", features = [
    "no-entrypoint",
] }
spl-token = { version = "2.0.8", features = ["no-entrypoint"] }
spl-token-2022 = { version = "1.0.0", features = [
    "no-entrypoint",
    "zk-ops",
], default-features = false }
transmitter-common = { path = "../../transmitter-common" }
anchor-spl = "0.29.0"
