[package]
name = "bridge-extension"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]
name = "bridge_extension"

[dependencies]
env_logger = "0.11"
entangle-photon-sol = { path = "../../programs/entangle-photon-sol" }
lazy_static = "1.4"
log = "0.4"
transmitter-common = { path = "../../transmitter-common" }
solana-sdk = "1.16"
dotenvy = "0.15.7"
ethabi = "18.0.0"
spl-associated-token-account = "1.1.2"
spl-token = { version = "2.0.8", features = ["no-entrypoint"] }
spl-token-2022 = { version = "1.0.0", features = [
    "no-entrypoint",
], default-features = false }
