[package]
name = "gov-extension"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]
name = "gov_extension"

[dependencies]
env_logger = "0.11"
entangle-photon-sol = { path = "../../programs/entangle-photon-sol" }
ethabi = "18.0"
hex = "0.4"
lazy_static = "1.4"
log = "0.4"
onefunc = { path = "../../programs/onefunc" }
serde_json = "1.0"
solana-sdk = "1.16"
transmitter-common = { path = "../../transmitter-common" }
